Fix restaurant list alignment

--- a/restaurants/static/src/sass/profile.scss
+++ b/restaurants/static/src/sass/profile.scss
@@ -89,7 +89,7 @@ $content-max-width: 960px;
         max-width: 90%;
         white-space: nowrap;
         border-radius: 2px;
-        margin: 1.2em 0.5em;
+        margin: 1.2em auto;
         a {
           display: inline-block;
           position: relative;
